- The skill numbers listed in 'skills' have changed! They are now stable,
  so for example 'Heal' will always be skill #28 no matter what character
  you are playing, even if you equip accessories that grant skills.
  If you previously made aliases for manually triggering skills, you will
  have to edit them to use the new skill numbers.


New features:
- HUGE performance gains in portal compilation. It's now 70% faster
  compared to 1.4.x.
- You can now configure Kore to never attack certain monsters, even when
  they attack you. In mon_control.txt, set the flag to -1. Example:
  Matyr -1 0 0
- useSelfSkill, useSelfItem and partySkill now also support the
  _monsters config option, just like attackSkillSlot.
  This example uses Pneuma only when Raydric Archer attacks:
  useSelf_skill_6 Pneuma
  ...
  useSelf_skill_6_monsters Raydric Archer
  ...
- Priority attacks for non-aggressive monsters are now supported.
- You can set Kore to avoid/prefer walking through certain maps
  (see control/routeweights.txt for configuration).
- Support for advanced 2-2 skills.
- If you are granted use of a temporary skill (e.g. Yggdrasil Leaf,
  Abracadabra), you can use the sl/sm/sp/ss commands to cast it using the
  number shown in the "Permitted to use" message. Example:

  > ss 290
  Permitted to use Defender (257), level 5
  You use Abracadabra on yourself: Lv 10
  > ss 257
  You use Defender on yourself: Lv 5
- 'monster', 'monocell', 'death' and 'mvp' commands have been removed. If you
  actually use these, set these aliases in your config.txt:

  alias_monster ss 293
  alias_monocell sm 293
  alias_death sp 295
  alias_mvp sm 292
- If 'sp' command is called without a player target, it will target yourself.
  Useful for e.g. 'alias_heal sp 28'.
- 'Item Appeared' message and 'il' command now display the item's
  coordinates.
- The Linux version no longer depends on sys/ioctl.ph. This means 
  the dynamic interface (support for left/right arrow keys, etc.) will work